--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,7 @@ Remote sound player
 
 {% block scripts %}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript">
-            $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-
-
-
-
-</script>
+<script type="text/javascript">$SCRIPT_ROOT = {{ request.script_root|tojson|safe }};</script>
 <script src="{{ url_for('static', filename='js/service.js') }}" type="text/javascript"></script>
 {{super()}}
 {% endblock %}
@@ -28,12 +22,8 @@ Remote sound player
 
     <div class="row">
         <div class="card">
-            <h5 id="now-playing" class="col-md-12 card-title">Selected</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card">
-            <h5 id="volume" class="col-md-12 card-title">Volume</h5>
+            <h5 class="col-md-1 card-title" id="selected-sound-status">Playing:</h5>
+            <h5 class="card-body col-md-3" id="selected-sound">{{ selected_sound_name }}</h5>
         </div>
     </div>
 
@@ -43,6 +33,13 @@ Remote sound player
         </div>
         <div class="col-md-6">
             <button class="btn btn-warning btn-block" id="stop" onclick="stop()" type="button">Stop</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="card">
+            <h5 class="col-md-1 card-title">Volume:</h5>
+            <h5 id="volume" class="card-body col-md-3">{{ volume }}</h5>
         </div>
     </div>
 
